# PROBSET2

./: CMakeLists.txt  Canvas.cpp  Canvas.h  README.md  main.cpp  mainWindow.cpp  mainWindow.h  reader.cpp  reader.h  sensorworker.cpp  sensorworker.h  voronoi.cpp  voronoi.h
